Paint backgrounds and borders for inline elements in the foreground layer.  b=36710, 27757  r=buster@netscape.com